# archestra

./: .editorconfig  .gitignore  CLAUDE.md  LICENSE  LICENSE.md  README.md  malicious-mcp-server.spec
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/release-please/: .release-please-manifest.json  release-please-config.json
.github/workflows/: bounty-bot.yml  build-base-mcp-server-docker-image.yml  build-desktop-application.yml  claude-code-review.yml  claude-code.yml  claude-dispatch.yml  claude-pull-requests.yml  claude.yml  copilot-setup-steps.yml  good-first-issue-welcome.yml  linting-and-tests.yml  on-pull-requests.yml  release-please.yml  user-scoped-claude-code.yml  user-scoped-claude-pull-requests.yml
.zed/: settings.json
desktop/: .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  components.json  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/.claude/: settings.local.json
desktop/.husky/: pre-commit
desktop/scripts/: run-sqlite-web.js
desktop/src/: App.tsx  consts.ts  main.tsx  types.ts
desktop/src-tauri/: Cargo.toml  tauri-mcp.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/sandbox-exec-profiles/: mcp-server-everything-for-now.sb  mcp-server-permissive.sb  mcp-server-restrictive.sb
desktop/src-tauri/src/: lib.rs  main.rs  ollama.rs  openapi.rs  test_fixtures.rs
desktop/src-tauri/src/archestra_mcp_server/: mod.rs
desktop/src-tauri/src/database/: connection.rs  migrate.rs  mod.rs
desktop/src-tauri/src/database/migration/: m20240101_000001_create_mcp_servers_table.rs  m20240101_000002_create_external_mcp_clients_table.rs  m20240101_000003_create_mcp_request_logs_table.rs  m20250124_000004_create_chats_table.rs  m20250124_000005_create_chat_interactions_table.rs  m20250124_000005_create_chat_messages_table.rs  m20250128_000006_drop_mcp_servers_meta_column.rs  mod.rs
desktop/src-tauri/src/gateway/: api.rs  llm_providers.rs  mcp.rs  mcp_proxy.rs  mod.rs  proxy.rs  websocket.rs
desktop/src-tauri/src/gateway/api/: chat.rs  external_mcp_client.rs  mcp_request_log.rs  mcp_server.rs  mod.rs
desktop/src-tauri/src/gateway/api/oauth/: gmail.rs  mod.rs
desktop/src-tauri/src/gateway/llm_providers/: mod.rs  ollama.rs
desktop/src-tauri/src/mcp_gateway/: mod.rs
desktop/src-tauri/src/models/: mod.rs
desktop/src-tauri/src/models/chat/: mod.rs
desktop/src-tauri/src/models/chat_interactions/: mod.rs
desktop/src-tauri/src/models/chat_messages/: mod.rs
desktop/src-tauri/src/models/external_mcp_client/: mod.rs
desktop/src-tauri/src/models/mcp_request_log/: mod.rs
desktop/src-tauri/src/models/mcp_server/: catalog.json  mod.rs  sandbox.rs
desktop/src-tauri/src/models/mcp_server/oauth/: gmail.rs  mod.rs
desktop/src-tauri/src/ollama/: client.rs  consts.rs  mod.rs  server.rs
desktop/src-tauri/src/sandbox/: mod.rs
desktop/src-tauri/src/utils/: common.rs  node.rs
desktop_app/: .gitignore  .npmrc  .prettierignore  .prettierrc  CHANGELOG.md  README.md  components.json  drizzle.config.ts  forge.config.ts  index.html  openapi-ts.archestra-api.config.ts  openapi-ts.libpod.config.ts  openapi.json  package.json  pnpm-lock.yaml  setup-tests.ts  tailwind.config.ts  tsconfig.json  vite.main.config.ts  vite.renderer.config.mts  vite.renderer.config.ts  vite.server.config.ts
desktop_app/.claude/: settings.local.json
desktop_app/.husky/: pre-commit
desktop_app/__mocks__/: child_process.ts  electron.ts  net.ts  process.ts
desktop_app/docs/: ADDING_OAUTH_PROVIDERS.md
desktop_app/generated-javascript-project/: index.js  openApi.json  package.json  security.js  service.js
desktop_app/icons/: icon.icns
desktop_app/scripts/: generate-openapi.ts
desktop_app/src/: App.tsx  TestChat.tsx  config.ts  example.test.ts  main-browser-auth.ts  main-slack-auth.ts  main.ts  preload.ts  renderer.tsx  server-process.ts  server.ts  types.ts
mcp_server_docker_image/: CHANGELOG.md  Dockerfile  README.md
oauth_proxy/: .env.example  README.md  package.json  pnpm-lock.yaml
oauth_proxy/public/: index.html  oauth-callback.html
oauth_proxy/src/: app.js  gmail.js  server.js
tauri/: .gitignore  CLAUDE.md  MCP_BRIDGE.md  README.md  index.html  package.json  pnpm-lock.yaml
tauri/.serena/: project.yml
tauri/public/: oauth-callback.html
tauri/sidecar-server/: build.js  hello-server.js  package-lock.json  package.json
tauri/src/: App.css  App.tsx  consts.ts  main.tsx  types.ts
tauri/src-tauri/: .taurignore  Cargo.toml  mcp_servers.db  super-restrictive.sb  tauri.conf.json
tauri/src-tauri/binaries/ollama-darwin/: libggml-base.dylib  ollama
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/sandbox-exec-profiles/: mcp-server-permissive.sb  mcp-server-restrictive.sb
tauri/src-tauri/src/: archestra_mcp_server.rs  database.rs  lib.rs  mcp.rs  mcp_bridge.rs  mcp_client.rs  mcp_proxy.rs  oauth.rs  ollama.rs  utils.rs
tauri/src-tauri/src/archestra_mcp_server/: client_connection_configs.rs  mod.rs  server.rs
tauri/src-tauri/src/archestra_mcp_server/client_connection_configs/: claude.rs  common.rs  cursor.rs  mod.rs  vscode.rs
tauri/src-tauri/src/database/: connection.rs  migrate.rs  mod.rs
tauri/src-tauri/src/database/migration/: m20240101_000001_create_mcp_servers_table.rs  m20240101_000002_create_client_connections_table.rs  m20240101_000002_create_external_mcp_clients_table.rs  mod.rs
tauri/src-tauri/src/llm_providers/: ollama.rs
tauri/src-tauri/src/models/: mod.rs
tauri/src-tauri/src/models/client_connection_config/: mod.rs
tauri/src-tauri/src/models/external_mcp_client/: mod.rs
tauri/src-tauri/src/models/mcp_server/: catalog.json  mod.rs  sandbox.rs
tauri/src-tauri/src/models/mcp_server/oauth/: gmail.rs  mod.rs
tauri/src-tauri/src/models/mcp_server/oauth/gmail/: mod.rs
tauri/src-tauri/src/utils/: mod.rs  node.rs
wasm-sandbox/: README.md  package-lock.json  package.json  webpack.config.mjs
wasm-sandbox/javy/: index.html  my_node_code.js  my_node_code.wasm  serve.js
(+716 files in other folders)
