[package]
name = "archestra-ai"
version = "0.1.0"
description = "Archestra Desktop App"
authors = ["Archestra"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "archestra_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# https://v2.tauri.app/plugin/deep-linking/#desktop
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }

[dependencies]
tokio = { version = "1.37", features = ["process", "io-util", "macros", "rt-multi-thread", "io-std"] }
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
tauri-plugin-deep-link = "2.4.0"
url = "2.5"
axum = "0.8.4"
hyper-util = "0.1.15"
tracing = "0.1.41"
hyper = "1.6.0"
once_cell = "1.21.3"
hex = "0.4.3"
lazy_static = "1.4"
bytes = "1.10.1"
async-stream = "0.3.6"
http-body-util = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1.0", features = ["runtime-tokio-rustls", "sqlx-sqlite"] }

[dev-dependencies]
tauri-mcp = "0.1"
tempfile = "3.8"
